# ESP32-C6-Touch-LCD-2.8

./: .gitattributes  README.cn.md  README.en.md  README.md  readme.txt
example/Arduino-v3.3.10/example/01_exio/: 01_exio.ino  io_extension.cpp  io_extension.h
example/Arduino-v3.3.10/example/02_I2C_qmi8658/: 02_I2C_qmi8658.ino  i2c_bsp.cpp  qmi8658c.cpp  qmi8658c.h
example/Arduino-v3.3.10/example/03_SD_Card/: 03_SD_Card.ino  sd_card_bsp.cpp
example/Arduino-v3.3.10/example/04_I2C_pcf85063/: 04_I2C_pcf85063.ino  rtc_bsp.cpp
example/Arduino-v3.3.10/example/05_shtc3/: 05_shtc3.ino
example/Arduino-v3.3.10/example/06_lvgl_demo/: 06_lvgl_demo.ino  Board_IO.cpp  Board_IO.h  Display_ST7789.cpp  Display_ST7789.h  Touch_CST3530.cpp  Touch_CST3530.h  lv_conf.h
example/ESP-IDF-V554/01_ch32_test/main/: CMakeLists.txt  idf_component.yml  main.c
example/ESP-IDF-V554/01_ch32_test/main/CH32V003/: ch32v003.c  ch32v003.h
example/ESP-IDF-V554/02_2048/: partitions.csv  sdkconfig
example/ESP-IDF-V554/02_2048/components/custom/: CMakeLists.txt  custom.c  lv_conf_ext.h
example/ESP-IDF-V554/02_2048/components/esp32_c6_touch_lcd_2_8/include/bsp/: display.h  esp32_c6_touch_lcd_2.8.h
example/ESP-IDF-V554/02_2048/components/waveshare__esp_lcd_touch_cst3530/: idf_component.yml
example/ESP-IDF-V554/02_2048/main/: idf_component.yml  main.c
example/ESP-IDF-V554/03_sd_lvgl/: sdkconfig
example/ESP-IDF-V554/03_sd_lvgl/components/pedrominatel__shtc3/: idf_component.yml
example/ESP-IDF-V554/03_sd_lvgl/components/waveshare__esp_lcd_touch_cst3530/: esp_lcd_touch_cst3530.c
example/ESP-IDF-V554/03_sd_lvgl/main/: CMakeLists.txt  idf_component.yml  main.c
example/ESP-IDF-V554/04_sd_music/: sdkconfig
example/ESP-IDF-V554/04_sd_music/components/bsp_extra/: CMakeLists.txt  idf_component.yml
example/ESP-IDF-V554/04_sd_music/components/esp32_c6_touch_lcd_2_8/include/bsp/: touch.h
example/ESP-IDF-V554/04_sd_music/components/pedrominatel__shtc3/examples/shtc3_read/main/: idf_component.yml
example/ESP-IDF-V554/04_sd_music/components/waveshare__esp_lcd_touch_cst3530/test_apps/main/: test_esp_lcd_touch_cst3530.c
example/ESP-IDF-V554/04_sd_music/main/: CMakeLists.txt  main.c
example/ESP-IDF-V554/05_spiff_music/: CMakeLists.txt  sdkconfig
example/ESP-IDF-V554/05_spiff_music/components/bsp_extra/src/: bsp_board_extra.c
example/ESP-IDF-V554/05_spiff_music/components/esp32_c6_touch_lcd_2_8/: CMakeLists.txt
example/ESP-IDF-V554/05_spiff_music/components/waveshare__esp_lcd_touch_cst3530/test_apps/: CMakeLists.txt
example/ESP-IDF-V554/05_spiff_music/components/waveshare__esp_lcd_touch_cst3530/test_apps/main/: CMakeLists.txt  idf_component.yml
example/ESP-IDF-V554/05_spiff_music/main/: CMakeLists.txt  main.c
example/ESP-IDF-V554/06_wifi_weather/: sdkconfig  sdkconfig.defaults
example/ESP-IDF-V554/06_wifi_weather/components/pedrominatel__shtc3/: CHECKSUMS.json  shtc3.c
example/ESP-IDF-V554/06_wifi_weather/main/: CMakeLists.txt  idf_component.yml  main.c
example/ESP-IDF-V554/07_Ball_qmi/: sdkconfig
example/ESP-IDF-V554/07_Ball_qmi/components/ball_qmi/: CMakeLists.txt  ball_qmi.c  ball_qmi.h  idf_component.yml
example/ESP-IDF-V554/07_Ball_qmi/components/esp32_c6_touch_lcd_2_8/: idf_component.yml
example/ESP-IDF-V554/07_Ball_qmi/components/esp32_c6_touch_lcd_2_8/include/bsp/: esp-bsp.h
example/ESP-IDF-V554/07_Ball_qmi/main/: CMakeLists.txt  idf_component.yml  main.c
example/ESP-IDF-V554/08_bookesia/: partitions.csv  sdkconfig
example/ESP-IDF-V554/08_bookesia/components/DrawingBoard/: CMakeLists.txt  DrawingBoard.cpp  DrawingBoard.hpp  idf_component.yml
example/ESP-IDF-V554/08_bookesia/components/DrawingBoard/assets/: image_draw.c
example/ESP-IDF-V554/08_bookesia/components/brookesia_core/: idf_component.yml
example/ESP-IDF-V554/08_bookesia/components/esp32_c6_touch_lcd_2_8/: esp32_c6_touch_lcd_2.8.c
example/ESP-IDF-V554/08_bookesia/components/pedrominatel__shtc3/: .component_hash
example/ESP-IDF-V554/08_bookesia/components/waveshare__esp_lcd_touch_cst3530/: esp_lcd_touch_cst3530.c
example/ESP-IDF-V554/08_bookesia/components/waveshare__esp_lcd_touch_cst3530/include/: esp_lcd_touch_cst3530.h
example/ESP-IDF-V554/08_bookesia/main/: CMakeLists.txt  main.cpp
example/ESP-IDF-V554/08_bookesia/main/dark/: app_launcher_data.hpp  core_data.hpp  gesture_data.hpp  navigation_bar_data.hpp  recents_screen_data.hpp  scr_bg.c  status_bar_data.hpp  stylesheet.hpp
guider_ui/gui_2048/: 240x320.guiguider  CMakeLists.txt
guider_ui/gui_2048/custom/: custom.h
guider_ui/gui_2048/lvgl/: lvgl.mk
guider_ui/gui_2048/lvgl-simulator/gg_external_data/freemaster/: connect_utils.h  freemaster_client.h
guider_ui/gui_2048/lvgl/src/draw/nxp/g2d/: lv_draw_g2d_img.c  lv_g2d_buf_map.c
guider_ui/gui_2048/lvgl/src/draw/nxp/pxp/: lv_draw_pxp.c
guider_ui/gui_2048/lvgl/src/drivers/wayland/: lv_wayland.c
guider_ui/gui_2048/ports/linux/: main.c
guider_ui/gui_2048/temp/: board.h  simulator.h
guider_ui/gui_musicapp/: musicapp.guiguider
guider_ui/gui_musicapp/lvgl/: lv_conf_template.h
guider_ui/gui_musicapp/lvgl-simulator/: main.c
guider_ui/gui_musicapp/lvgl-simulator/gg_external_data/: gg_external_data.h
guider_ui/gui_musicapp/lvgl-simulator/gg_external_data/freemaster/: freemaster_client.c
guider_ui/gui_musicapp/lvgl/src/: lv_conf_internal.h  lv_init.c
guider_ui/gui_musicapp/lvgl/src/draw/nxp/g2d/: lv_draw_g2d.c
guider_ui/gui_musicapp/lvgl/src/drivers/wayland/: lv_wl_window.c
guider_ui/gui_musicapp/ports/linux/: build.sh
guider_ui/gui_musicapp/temp/: board.h
guider_ui/gui_weatherapp/: weather_app.guiguider
guider_ui/gui_weatherapp/lvgl/: SBOM.spdx.json
guider_ui/gui_weatherapp/lvgl-simulator/: simulator_icon.c
guider_ui/gui_weatherapp/lvgl/demos/benchmark/: lv_demo_benchmark.c
guider_ui/gui_weatherapp/temp/: board.h
sdcard/: Test.txt
