idf_component_register(
                         SRCS 
                              "./main.c" 
                              "./CH32V003/ch32v003.c"
                              
                         INCLUDE_DIRS 
                              "./CH32V003"
                              "."

                       )
